@@ -5,6 +5,8 @@ v0.1.1
         * first level ndx inserts pass test                         * SLOC  549
     2014-04-08
         * test verifies first level values correct                  * SLOC  571
+    2014-04-12
+        * tested, working Table32.{insert,find,delete}Entry()       * SLOC  730
 
 v0.1.0
     2014-04-04
